--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,7 +4,7 @@ ldflags=-L${legion_install_dir}/lib64/ -llegion -lrealm -lpthread -ldl -rdynamic
 cflags=-std=c++14 -Wall -I${legion_install_dir}/include -I.. -g
 CC=g++
 
-examples=saxpy_index saxpy_inline
+examples=hello_world fib index_tasks saxpy_index saxpy_inline
 
 all: ${examples}
 
