--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,11 +1,11 @@
-legion_install_dir=/home/wwu12/legion-install
+legion_install_dir=/home/wwu/legion-install
 ldflags=-L${legion_install_dir}/lib64/ -llegion -lrealm -lpthread -ldl -rdynamic \
 			  -lrt 
 cflags=-std=c++14 -Wall -I${legion_install_dir}/include -I.. -g
 CC=g++
 
 #examples=hello_world fib index_tasks saxpy_index saxpy_inline saxpy 2d multiple_partitions
-examples=vpsc_example
+examples=saxpy
 
 all: ${examples}
 
