--- a/examples/Makefile
+++ b/examples/Makefile
@@ -5,7 +5,7 @@ cflags=-std=c++14 -Wall -I${legion_install_dir}/include -I.. -g
 CC=g++
 
 #examples=hello_world fib index_tasks saxpy_index saxpy_inline saxpy 2d multiple_partitions
-examples=vpsc_example
+examples=saxpy
 
 all: ${examples}
 
