--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,8 +4,8 @@ ldflags=-L${legion_install_dir}/lib64/ -llegion -lrealm -lpthread -ldl -rdynamic
 cflags=-std=c++14 -Wall -I${legion_install_dir}/include -I.. -g
 CC=g++
 
-#examples=hello_world fib index_tasks saxpy_index saxpy_inline saxpy 2d multiple_partitions
-examples=saxpy_index
+examples=hello_world fib index_tasks saxpy_index saxpy 2d  multiple_partitions
+#examples=vpsc_example
 
 all: ${examples}
 
