--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,13 +4,16 @@ ldflags=-L${legion_install_dir}/lib64/ -llegion -lrealm -lpthread -ldl -rdynamic
 cflags=-std=c++14 -Wall -I${legion_install_dir}/include -I.. -g
 CC=g++
 
-examples=hello_world fib index_tasks saxpy_index saxpy 2d  multiple_partitions
-#examples=vpsc_example
+examples= saxpy_index
+#examples=vpsc_example hello_world fib index_tasks saxpy_index saxpy 2d  multiple_partitions
 
 all: ${examples}
 
-%: %.cc ../equites.h 
-	${CC} ${cflags} -o $@ $< ${ldflags}
+legion_simplified.o: ../legion_simplified.cc ../legion_simplified.h
+	${CC} ${cflags} -o $@ -c $< 
+
+%: %.cc legion_simplified.o ../legion_simplified.h 
+	${CC} ${cflags} -o $@ $< legion_simplified.o ${ldflags}
 
 clean: 
 	rm ${examples}
