--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,8 +4,8 @@ ldflags=-L${legion_install_dir}/lib64/ -llegion -lrealm -lpthread -ldl -rdynamic
 cflags=-std=c++14 -Wall -I${legion_install_dir}/include -I.. -g
 CC=g++
 
-examples= saxpy_inline
-#examples=vpsc_example hello_world fib index_tasks saxpy_index saxpy 2d multiple_partitions
+examples= saxpy_inline hello_world fib index_tasks saxpy_index saxpy 2d multiple_partitions
+#examples=vpsc_example 
 
 all: ${examples}
 
